tests/ui/mismatch_ty_in_or_pattern.ina
// COMPILE_FAIL

type Foo =
    | A(i32)
    | B(i64)

fn main() {
    match Foo::A(20) {
        Foo::A(x) | Foo::B(x) => x,
    };
}
